--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "helmet": "^3.21.2",
     "http-status-enum": "^1.0.2",
     "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.3",
@@ -38,6 +39,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/helmet": "0.0.45",
+    "@types/jsonwebtoken": "^8.3.6",
     "@types/node": "^13.1.0",
     "@types/uuid": "^3.4.6",
     "@types/validator": "^12.0.1",
