--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ db.name=blahblahblah
 db.username=blahblahblah
 db.password=blahblahblah
 
-jwt.public.path=/blahblahblah
-jwt.private.path=/blahblahblah
+jwt.public.path=./jwt-key.pub
+jwt.private.path=./jwt-key
